welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:3: error: ')' expected but ';' found.
do {avance()} while (croisement();)
                                 ^Poucet:3: error: illegal start of statement
do {avance()} while (croisement();)
                                  ^